--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "nodemon": "^2.0.9",
     "update": "^0.7.4",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "express-swagger-generator": "^1.1.17"
   }
 }
